--- a/Index.html
+++ b/Index.html
@@ -452,12 +452,10 @@
         document.getElementById('itemQuantity').value = 1; 
     });
 </script>
-
-
-
+    
     <footer>
-  <p> Free to use generator. If you like it and want to donate, do it here: https://www.paypal.me/angeelvieera</p> 
-        <p>Made by VieraGuti</p>
-    </footer>
-</body>
-</html>
+    <address>
+        <p>Free to use generator. If you like it and want to donate, do it here: <a href="https://www.paypal.me/angeelvieera">PayPal</a></p>
+    </address>
+    <p>Made by VieraGuti</p>
+</footer>
