--- a/Index.html
+++ b/Index.html
@@ -425,24 +425,30 @@
         });
         document.getElementById('command_list').innerText = commands.join('\n');
     });
-let kitCounter = 0; // Define el contador global
+<script src="kitCounter.js"></script>
+<script>
+    let kitCounter = localStorage.getItem('kitCount') ? parseInt(localStorage.getItem('kitCount')) : 0; // Carga el contador desde localStorage
 
-function incrementKitCounter() {
-    kitCounter++;
-    document.getElementById('kitCounter').textContent = kitCounter; // Actualiza el contador en el DOM
-}
+    // Muestra el contador en el DOM al cargar la página
+    document.addEventListener('DOMContentLoaded', () => {
+        document.getElementById('kitCounter').textContent = kitCounter;
+    });
 
-  <script src="kitCounter.js"></script>
-    <script>
-        document.getElementById('copyCommands').addEventListener('click', () => {
-            const commandList = document.getElementById('command_list');
-            navigator.clipboard.writeText(commandList.innerText).then(() => {
-                alert('Comandos copiados al portapapeles!');
-                incrementKitCounter(); // Llama a la función correctamente
-            }).catch(err => {
-                console.error('Error al copiar: ', err);
-            });
+    function incrementKitCounter() {
+        kitCounter++;
+        localStorage.setItem('kitCount', kitCounter); // Guarda el nuevo contador en localStorage
+        document.getElementById('kitCounter').textContent = kitCounter; // Actualiza el contador en el DOM
+    }
+
+    document.getElementById('copyCommands').addEventListener('click', () => {
+        const commandList = document.getElementById('command_list');
+        navigator.clipboard.writeText(commandList.innerText).then(() => {
+            alert('Comandos copiados al portapapeles!');
+            incrementKitCounter(); // Llama a la función correctamente
+        }).catch(err => {
+            console.error('Error al copiar: ', err);
         });
+    });
 
  
 
