--- a/Index.html
+++ b/Index.html
@@ -162,7 +162,7 @@
 </head>
 <body>
     <div id="kitCounterContainer">
-    <p>Kits generados: <span id="kitCounter">0</span></p>
+    <p>Kits generated: <span id="kitCounter">0</span></p>
 </div>
     <h1>Kits Generator</h1>
 
@@ -305,12 +305,14 @@
         opacity: 0.8; /* Disminuir opacidad para resaltar la selección */
     }
 </style>
-
 <script>
     window.onload = function() {
         console.log(items); 
         loadCategories();
+        document.getElementById('kitCounter').textContent = kitCounter; // Muestra el contador al cargar
     };
+
+    let kitCounter = localStorage.getItem('kitCount') ? parseInt(localStorage.getItem('kitCount')) : 0; // Carga el contador desde localStorage
 
     function loadCategories() {
         const categorySelect = document.getElementById('category');
@@ -342,16 +344,14 @@
                 img.alt = item.name;
 
                 img.addEventListener('click', () => {
-                    // Limpiamos la selección previa
                     const previouslySelected = document.querySelector('.image-item.selected');
                     if (previouslySelected) {
                         previouslySelected.classList.remove('selected');
                     }
 
-                    // Seleccionamos el nuevo ítem
                     selectedItem.id = item.id;
                     selectedItem.category = category;
-                    imageItem.classList.add('selected'); // Añadimos clase para resaltar
+                    imageItem.classList.add('selected');
                     console.log(`Seleccionado: ${item.name}`);
                 });
 
@@ -373,7 +373,7 @@
                 }
 
                 applyItemToSlot(slot, selectedItem, quantity);
-                selectedItem.id = null; // Reseteamos la selección
+                selectedItem.id = null;
             }
         });
     });
@@ -425,33 +425,22 @@
         });
         document.getElementById('command_list').innerText = commands.join('\n');
     });
-    
-<script src="kitCounter.js"></script>
-<script>
-    let kitCounter = localStorage.getItem('kitCount') ? parseInt(localStorage.getItem('kitCount')) : 0; // Carga el contador desde localStorage
-
-    // Muestra el contador en el DOM al cargar la página
-    document.addEventListener('DOMContentLoaded', () => {
-        document.getElementById('kitCounter').textContent = kitCounter;
-    });
 
     function incrementKitCounter() {
         kitCounter++;
-        localStorage.setItem('kitCount', kitCounter); // Guarda el nuevo contador en localStorage
-        document.getElementById('kitCounter').textContent = kitCounter; // Actualiza el contador en el DOM
+        localStorage.setItem('kitCount', kitCounter);
+        document.getElementById('kitCounter').textContent = kitCounter;
     }
 
     document.getElementById('copyCommands').addEventListener('click', () => {
         const commandList = document.getElementById('command_list');
         navigator.clipboard.writeText(commandList.innerText).then(() => {
             alert('Comandos copiados al portapapeles!');
-            incrementKitCounter(); // Llama a la función correctamente
+            incrementKitCounter();
         }).catch(err => {
             console.error('Error al copiar: ', err);
         });
     });
-
- 
 
     document.getElementById('newKit').addEventListener('click', () => {
         document.getElementById('kitName').value = '';
@@ -467,6 +456,8 @@
         document.getElementById('itemQuantity').value = 1; 
     });
 </script>
+
+
     
     <footer>
     <address>
