--- a/Index.html
+++ b/Index.html
@@ -460,6 +460,7 @@
 
     
     <footer>
+        <p>** If "undefined" appears, you must refresh the page. and start again. ** </p>
     <address>
         <p>Free to use generator. If you like it and want to donate, do it here: <a href="https://www.paypal.me/angeelvieera">PayPal</a></p>
     </address>
