--- a/Index.html
+++ b/Index.html
@@ -154,7 +154,7 @@
         }
 
         h3 {
-            font-size: 1.2em; /* Ajusta aún más el tamaño del encabezado */
+            font-size: 1.2em; /* ese es bueeeeeeeeeeeeeeeeeeeeeeeeeeenooooooooo */
         }
     }
 </style>
