--- a/Index.html
+++ b/Index.html
@@ -5,160 +5,160 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kits Generator Rust CE </title>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Russo One', sans-serif;
-            background-color: #121212; 
-            color: #fff;
-            margin: 0;
-            padding: 20px;
+<style>
+    body {
+        font-family: 'Russo One', sans-serif;
+        background-color: #121212; 
+        color: #fff;
+        margin: 0;
+        padding: 20px;
+    }
+
+    h3 {
+        text-align: center;
+        color: #FF4500;
+        text-shadow: 1px 1px 2px #000;
+        margin-top: 20px;
+    }
+
+    label {
+        display: block;
+        margin: 15px 0 5px; 
+        color: #FF4500; 
+    }
+
+    input, select, button {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0 15px; 
+        border: 2px solid #FF4500; 
+        border-radius: 5px;
+        background-color: #333;
+        color: #fff;
+        font-size: 1em;
+        transition: border 0.3s; 
+    }
+
+    button {
+        cursor: pointer;
+        background-color: #FF4500; 
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
+    }
+
+    button:hover {
+        background-color: #E53E00; 
+    }
+
+    .main-slots {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+        border: 2px solid #FF4500; 
+        padding: 10px;
+        border-radius: 10px;
+        background-color: #1e1e1e; 
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4); 
+    }
+
+    .slot-container {
+        display: flex;
+        flex-wrap: wrap; 
+        justify-content: center; 
+        margin: 10px auto; 
+        max-width: 450px; 
+    }
+
+    .small-slot, .main-slot {
+        width: 50px; 
+        height: 50px; 
+        border: 1px solid #FF4500; 
+        margin: 5px; 
+        background-color: #222; 
+        border-radius: 5px; 
+        position: relative;
+        text-align: center;
+        line-height: 50px; 
+        transition: background-color 0.3s, transform 0.2s; 
+    }
+
+    .main-slot:hover {
+        background-color: #333; 
+        transform: scale(1.05); 
+    }
+
+    .main-slot img, .small-slot img {
+        max-width: 100%; 
+        max-height: 100%;
+        border-radius: 5px;
+    }
+
+    .image-container {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 10px;
+    }
+
+    .image-item {
+        margin: 5px;
+        text-align: center;
+    }
+
+    .image-item img {
+        width: 80px;
+        cursor: pointer;
+        border: 1px solid #FF4500;
+        border-radius: 5px;
+        transition: transform 0.2s; 
+    }
+
+    .image-item img:hover {
+        transform: scale(1.1); 
+    }
+
+    #command_list {
+        margin-top: 20px;
+        padding: 10px;
+        background-color: #292929;
+        border: 2px solid #FF4500;
+        border-radius: 10px;
+    }
+
+    footer {
+        text-align: center;
+        color: #EAEAEA;
+        font-size: 0.8em;
+        margin-top: 40px;
+    }
+
+    @media (max-width: 768px) {
+        .small-slot, .main-slot {
+            width: 40px; 
+            height: 40px; 
         }
 
         h3 {
-            text-align: center;
-            color: #FF4500;
-            text-shadow: 1px 1px 2px #000;
-            margin-top: 20px;
+            font-size: 1.5em; 
         }
+    }
 
-        label {
-            display: block;
-            margin: 15px 0 5px; 
-            color: #FF4500; 
+    @media (max-width: 480px) {
+        .small-slot, .main-slot {
+            width: 35px; 
+            height: 35px; 
         }
 
         input, select, button {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0 15px; 
-            border: 2px solid #FF4500; 
-            border-radius: 5px;
-            background-color: #333;
-            color: #fff;
-            font-size: 1em;
-            transition: border 0.3s; 
+            padding: 8px; 
+            font-size: 0.9em; 
         }
 
-        button {
-            cursor: pointer;
-            background-color: #FF4500; 
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
+        h3 {
+            font-size: 1.2em; 
         }
+    }
+</style>
 
-        button:hover {
-            background-color: #E53E00; 
-        }
-
-        .main-slots {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20px;
-            border: 2px solid #FF4500; 
-            padding: 10px;
-            border-radius: 10px;
-            background-color: #1e1e1e; 
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4); 
-        }
-
-        .slot-container {
-            display: flex;
-            flex-wrap: wrap; 
-            justify-content: center; 
-            margin: 10px auto; 
-            max-width: 450px; 
-        }
-
-        .main-slot {
-            width: 50px; 
-            height: 50px; 
-            border: 1px solid rgba(255, 69, 0, 0.5); 
-            margin: 2px; 
-            background-color: #222; 
-            border-radius: 5px; 
-            position: relative;
-            text-align: center;
-            line-height: 50px; 
-            transition: background-color 0.3s, transform 0.2s; 
-        }
-
-        .main-slot:hover {
-            background-color: #333; 
-            transform: scale(1.05); 
-        }
-
-        .main-slot img {
-            max-width: 100%; 
-            max-height: 100%;
-            border-radius: 5px;
-        }
-
-        .image-container {
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 10px;
-        }
-
-        .image-item {
-            margin: 5px;
-            text-align: center;
-        }
-
-        .image-item img {
-            width: 80px;
-            cursor: pointer;
-            border: 1px solid #FF4500;
-            border-radius: 5px;
-            transition: transform 0.2s; 
-        }
-
-        .image-item img:hover {
-            transform: scale(1.1); 
-        }
-
-        #command_list {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #292929;
-            border: 2px solid #FF4500;
-            border-radius: 10px;
-        }
-
-        footer {
-            text-align: center;
-            color: #EAEAEA;
-            font-size: 0.8em;
-            margin-top: 40px;
-        }
-
-        
-        @media (max-width: 768px) {
-            .main-slot {
-                width: 40px; 
-                height: 40px; 
-            }
-
-            h3 {
-                font-size: 1.5em; 
-            }
-        }
-
-        @media (max-width: 480px) {
-            .main-slot {
-                width: 35px; 
-                height: 35px; 
-            }
-
-            input, select, button {
-                padding: 8px; 
-                font-size: 0.9em; 
-            }
-
-            h3 {
-                font-size: 1.2em; /
-            }
-        }
-    </style>
 </head>
 
 
@@ -231,62 +231,62 @@
     </select>
 
     <div class="main-slots">
-        <h3>Wear</h3>
-        <div class="slot-container">
-            <div class="small-slot" data-type="wear"></div>
-            <div class="small-slot" data-type="wear"></div>
-            <div class="small-slot" data-type="wear"></div>
-            <div class="small-slot" data-type="wear"></div>
-            <div class="small-slot" data-type="wear"></div>
-            <div class="small-slot" data-type="wear"></div>
-            <div class="small-slot" data-type="wear"></div>
-        </div>
-        
-     <h3>Main</h3>
-<div class="slot-container">
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-</div>
-<div class="slot-container">
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-</div>
-<div class="slot-container">
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-</div>
-<div class="slot-container">
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-    <div class="main-slot" data-type="main"></div>
-</div>
-
-
-        <h3>Belt</h3>
-        <div class="slot-container">
-            <div class="main-slot" data-type="belt"></div>
-            <div class="main-slot" data-type="belt"></div>
-            <div class="main-slot" data-type="belt"></div>
-            <div class="main-slot" data-type="belt"></div>
-            <div class="main-slot" data-type="belt"></div>
-            <div class="main-slot" data-type="belt"></div>
-        </div>
+    <h3>Wear</h3>
+    <div class="slot-container">
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
+        <div class="small-slot" data-type="wear"></div>
     </div>
+</div>
+
+<div class="main-slots">
+    <h3>Main</h3>
+    <div class="slot-container">
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+    <div class="slot-container">
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+    <div class="slot-container">
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+    <div class="slot-container">
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+        <div class="main-slot" data-type="main"></div>
+    </div>
+</div>
+
+<div class="main-slots">
+    <h3>Belt</h3>
+    <div class="slot-container">
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+        <div class="main-slot" data-type="belt"></div>
+    </div>
+</div>
 
     <label for="itemQuantity">Quantity:</label>
     <input type="number" id="itemQuantity" value="1" min="1" />
