--- a/Index.html
+++ b/Index.html
@@ -82,7 +82,7 @@
         transition: background-color 0.3s, transform 0.2s; 
     }
 
-    .main-slot:hover {
+    .main-slot:hover, .small-slot:hover {
         background-color: #333; 
         transform: scale(1.05); 
     }
@@ -241,9 +241,7 @@
         <div class="small-slot" data-type="wear"></div>
         <div class="small-slot" data-type="wear"></div>
     </div>
-</div>
 
-<div class="main-slots">
     <h3>Main</h3>
     <div class="slot-container">
         <div class="main-slot" data-type="main"></div>
@@ -274,9 +272,7 @@
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
     </div>
-</div>
 
-<div class="main-slots">
     <h3>Belt</h3>
     <div class="slot-container">
         <div class="main-slot" data-type="belt"></div>
@@ -286,7 +282,7 @@
         <div class="main-slot" data-type="belt"></div>
         <div class="main-slot" data-type="belt"></div>
     </div>
-</div>
+    </div>
 
     <label for="itemQuantity">Quantity:</label>
     <input type="number" id="itemQuantity" value="1" min="1" />
