--- a/Index.html
+++ b/Index.html
@@ -250,21 +250,21 @@
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
-        
+        </div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
-
+        </div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
-
+        </div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
         <div class="main-slot" data-type="main"></div>
