--- a/Index.html
+++ b/Index.html
@@ -66,7 +66,7 @@
             flex-wrap: wrap; 
             justify-content: center; 
             margin: 10px auto; 
-            max-width: 420px; /* Ajustado para 7 slots */
+            max-width: 480px; /* Ajustado para 7 slots en wear */
         }
 
         .small-slot, .main-slot {
@@ -158,7 +158,6 @@
             }
         }
     </style>
-
 
 </head>
 
