--- a/Index.html
+++ b/Index.html
@@ -579,8 +579,8 @@
 
 
     <footer>
-        <p>** If "undefined" appears, you must refresh the page. and start again. ** </p>
+        <p>** If "error" appears, you must refresh the page. and start again. ** </p>
     <address>
     </address>
-    <p>Made by VieraGuti</p>
+    <p>Made by VieraGuti with love ♥</p>
 </footer>
