--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 
     h3 {
         text-align: center;
-        color: #FF4500;
+        color: #1c8872; /* Color cambiado */
         text-shadow: 1px 1px 2px #000;
         margin-top: 20px;
         animation: fadeIn 1s ease-out; /* Animación de aparición para los títulos */
@@ -26,14 +26,14 @@
     label {
         display: block;
         margin: 10px 0 5px;
-        color: #FF4500;
+        color: #1c8872; /* Color cambiado */
     }
 
     input, select, button {
         width: 100%;
         padding: 10px;
         margin: 5px 0 10px;
-        border: 2px solid #FF4500;
+        border: 2px solid #1c8872; /* Color cambiado */
         border-radius: 5px;
         background-color: #333;
         color: #fff;
@@ -46,9 +46,9 @@
     }
 
     button:hover {
-        background-color: #E53E00;
+        background-color: #1c8872; /* Color cambiado */
         transform: scale(1.1); /* Efecto de aumento al pasar el mouse */
-        box-shadow: 0px 0px 10px rgba(255, 69, 0, 0.7); /* Sombras más intensas en hover */
+        box-shadow: 0px 0px 10px rgba(28, 136, 114, 0.7); /* Sombras más intensas en hover */
     }
 
     .main-slots {
@@ -56,11 +56,11 @@
         flex-direction: column;
         align-items: center;
         margin-top: 20px;
-        border: 2px solid #FF4500;
+        border: 2px solid #1c8872; /* Color cambiado */
         padding: 10px;
         border-radius: 10px;
         background-color: #1e1e1e;
-        box-shadow: 0 0 10px rgba(255, 69, 0, 0.5);
+        box-shadow: 0 0 10px rgba(28, 136, 114, 0.5); /* Sombras más intensas en hover */
         transition: transform 0.3s ease-out;
     }
 
@@ -88,7 +88,7 @@
     .small-slot, .main-slot {
         width: 50px;
         height: 50px;
-        border: 1px solid #FF4500;
+        border: 1px solid #1c8872; /* Color cambiado */
         margin: 5px;
         background-color: #222;
         position: relative;
@@ -133,20 +133,20 @@
     .image-item img {
         width: 80px;
         cursor: pointer;
-        border: 1px solid #FF4500;
+        border: 1px solid #1c8872; /* Color cambiado */
         border-radius: 5px;
         transition: box-shadow 0.3s ease-in-out;
     }
 
     .image-item img:hover {
-        box-shadow: 0px 0px 15px rgba(255, 69, 0, 0.7); /* Sombras al pasar el mouse sobre las imágenes */
+        box-shadow: 0px 0px 15px rgba(28, 136, 114, 0.7); /* Sombras al pasar el mouse sobre las imágenes */
     }
 
     #command_list {
         margin-top: 20px;
         padding: 10px;
         background-color: #292929;
-        border: 2px solid #FF4500;
+        border: 2px solid #1c8872; /* Color cambiado */
         border-radius: 10px;
         transition: background-color 0.3s ease-in-out;
     }
