--- a/Index.html
+++ b/Index.html
@@ -162,6 +162,15 @@
         margin-top: 40px;
     }
 
+    /* Nuevos estilos para los textos de "Kits generated" y "Kits Generator" */
+    .kits-text, .kits-title {
+        color: #073434; /* Color cambiado */
+    }
+
+    .kits-text:hover, .kits-title:hover {
+        color: #1c8872; /* Efecto hover: cambiar a color #1c8872 */
+    }
+
     /* Media Queries para diseño responsivo */
     @media (max-width: 768px) {
         .small-slot, .main-slot {
